# NBA-dashboard

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  backfill_shooting_zones.py  collect_assist_zones.py  init_db.py  matchup_analysis.py  nba  nba_schedule.py  nba_stats_collector.py  nba_teams.py  query_play_types.py  requirements.txt  update_stats.py  verify_data.py
.githooks/: pre-commit
api/: API_ENDPOINTS.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: health.rs  line_shopping.rs  mod.rs  players.rs  schedule.rs  teams.rs  zones.rs
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
models/: assists_classifier.joblib  assists_regressor.joblib  points_classifier.joblib  points_regressor.joblib  rebounds_classifier.joblib  rebounds_regressor.joblib
nba_stats_api/: .env.example  API_ENDPOINTS.md  Cargo.toml
scripts/: cloud_run_entrypoint.sh  cloud_run_scrape.sh  daily_ml_update.py  predict_props.py  run_with_env.sh  scrape_odds.py  scrape_props.py  sync_db_from_cloud.sh  train_models.py  update_stats.py
src/: __init__.py  config.py  feature_engineering.py  init_db.py  nba_stats_collector.py  prop_outcome_tracker.py  rolling_stats.py  stats_collector.py
tests/: __init__.py  conftest.py
trained_models/: assists_classifier.joblib  assists_regressor.joblib  points_classifier.joblib  points_regressor.joblib  rebounds_classifier.joblib  rebounds_regressor.joblib  tuned_params.json
underdog/: __init__.py  underdog_scraper.py  (+1 more)
(+135 files in other folders)
