[package]
name = "nba_stats_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.7" 

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Middleware & utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15.7"

# Error handling
thiserror = "1.0"
chrono = "0.4.42"
chrono-tz = "0.10"
regex = "1.11"

[dev-dependencies]
# For testing HTTP endpoints
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
